# adapt-gauge-core

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ja.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: test-procedure.md  usage-guide.md  usage-guide_ja.md
results/demo/: raw_results_cloud_model_demo.csv  raw_results_local_model_demo.csv  raw_results_phase15_demo.csv  raw_results_qwen35_demo.csv  summary_cloud_model_demo.csv  summary_demo.csv  summary_local_model_demo.csv  summary_phase15_demo.csv  summary_qwen35_demo.csv
scripts/: generate_readme_images.py
src/adapt_gauge_core/: __init__.py  __main__.py  efficiency_calc.py  example_selector.py  harness_config.py  model_client.py  prompt_builder.py  runner.py  task_loader.py  viewer.py
src/adapt_gauge_core/domain/: __init__.py  constants.py  entities.py  value_objects.py
src/adapt_gauge_core/infrastructure/: __init__.py
src/adapt_gauge_core/infrastructure/model_clients/: __init__.py  base.py  claude.py  factory.py  lmstudio.py  openai.py  vertex_ai.py
src/adapt_gauge_core/scoring/: __init__.py  llm_judge.py  scorer.py  text_scorers.py
src/adapt_gauge_core/use_cases/: __init__.py  aei.py  evaluation.py  health_check.py
tasks/: classification.json  code_fix.json  custom_route_001.json  sentiment_analysis.json  summarization.json  task_pack_core_demo.json  task_pack_english_small.json  task_pack_phase15.json
tests/: test_efficiency_calc.py  test_example_selector.py  test_harness_config.py  test_prompt_builder.py  test_resume_and_trials.py  test_runner_integration.py  test_task_loader.py
tests/domain/: test_constants.py  test_entities.py
tests/infrastructure/: test_model_clients.py
tests/scoring/: test_llm_judge.py  test_scorer_core.py  test_text_scorers.py
tests/use_cases/: test_aei.py  test_collapse_classification.py
