[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapt-gauge-core"
version = "0.1.0"
description = "Core evaluation pipeline for measuring LLM adaptation efficiency"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "google-genai>=1.0.0",
    "google-api-core>=2.0.0",
    "anthropic[vertex]>=0.39.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
viewer = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
