[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapt-gauge-core"
version = "0.1.0"
description = "Core evaluation pipeline for measuring LLM adaptation efficiency"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shuntaro Okuma"},
]
keywords = [
    "llm",
    "evaluation",
    "few-shot",
    "adaptation-efficiency",
    "few-shot-collapse",
    "benchmarking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "google-genai>=1.0.0",
    "google-api-core>=2.0.0",
    "anthropic[vertex]>=0.39.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/ShuntaroOkuma/adapt-gauge-core"
Repository = "https://github.com/ShuntaroOkuma/adapt-gauge-core"
Issues = "https://github.com/ShuntaroOkuma/adapt-gauge-core/issues"

[project.optional-dependencies]
viewer = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
